【沙盒Demo】Step9：基本接口对接完成（增、删1、查1、删All、查All）

--- a/SDOperator/htmls/index.html
+++ b/SDOperator/htmls/index.html
@@ -13,6 +13,7 @@
 <button id="sd_create" onclick="onSdCreate()">添加沙盒</button>
 <button id="sd_remove" onclick="onSdRemove()">删除沙盒</button>
 <button id="sd_select" onclick="onSdSelect()">查找一个沙盒</button>
+<button id="sd_remove_all" onclick="onSdRemoveAll()">删除所有沙盒</button>
 <button id="sd_select_all" onclick="onSdSelectAll()">查找所有沙盒</button>
 <br/>
 <label id="sd_testLabel">
