【沙盒Html】Step2：沙盒信息页展示

--- a/SDOperator/htmls/index.html
+++ b/SDOperator/htmls/index.html
@@ -65,8 +65,13 @@
         沙盒构建演示Demo - 主页
     </div>
 
+    <!-- 内容 -->
     <div id="mainpage_sd_board" class="mainpage_sd_board chris_rowflex">
+
+        <!-- 沙盒信息 -->
         <div id="mainpage_sd_info" class="mainpage_sd_info"></div>
+
+        <!-- 沙盒操作-->
         <div id="mainpage_sd_op" class="mainpage_sd_op"></div>
     </div>
 </div>
