--- a/SDOperator/htmls/index.html
+++ b/SDOperator/htmls/index.html
@@ -1,31 +1,3 @@
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-<!--<meta charset="UTF-8" />-->
-<!--<title>菜鸟教程 React 实例</title>-->
-<!--<script src="https://cdn.staticfile.org/react/16.4.0/umd/react.development.js"></script>-->
-<!--<script src="https://cdn.staticfile.org/react-dom/16.4.0/umd/react-dom.development.js"></script>-->
-<!--<script src="https://cdn.staticfile.org/babel-standalone/6.26.0/babel.min.js"></script>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--<div id="example"></div>-->
-<!--<script type="text/babel">-->
-<!--function HelloMessage(props) {-->
-<!--return <h1>Hello World!</h1>;-->
-<!--}-->
-
-<!--const element = <HelloMessage />;-->
-
-<!--ReactDOM.render(-->
-<!--element,-->
-<!--document.getElementById('example')-->
-<!--);-->
-<!--</script>-->
-
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -50,31 +22,11 @@
     <script type="text/javascript" src="./js/html_index.js"></script>
 
     <!-- REACT -->
-    <script type="text/babel" src="./react/react_sd_info.js"></script>
-    <script type="text/babel" src="./react/react_sd_op.js"></script>
-    <script type="text/babel" src="./react/testreact.js"></script>
-
+    <script type="text/babel" src="./react/react_sd_mainpage.jsx"></script>
 </head>
 
 <body>
-
-<div class="mainpage_baseboard flex-col">
-
-    <!-- 标题 -->
-    <div class="mainpage_titleLabel chris_rowflex">
-        沙盒构建演示Demo - 主页
-    </div>
-
-    <!-- 内容 -->
-    <div id="mainpage_sd_board" class="mainpage_sd_board chris_rowflex">
-
-        <!-- 沙盒信息 -->
-        <div id="mainpage_sd_info" class="mainpage_sd_info"></div>
-
-        <!-- 沙盒操作-->
-        <div id="mainpage_sd_op" class="mainpage_sd_op"></div>
-    </div>
-</div>
-
+<div id="mainpage"></div>
 </body>
+
 </html>
