【沙盒Html】Step6：清理部分Warning

--- a/SDOperator/htmls/index.html
+++ b/SDOperator/htmls/index.html
@@ -6,7 +6,7 @@
     <title>沙盒操作</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="./css/bootstrap.min.css">-->
     <link rel="stylesheet" href="./css/chris-base.css">
     <link rel="stylesheet" href="./css/chris_flex.css">
 
