【沙盒Html】Step10：基本完成沙盒列表页面

--- a/SDOperator/htmls/sd_table.html
+++ b/SDOperator/htmls/sd_table.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta charset="UTF-8">
-    <title>沙盒操作</title>
+    <title>沙盒表格</title>
 
     <!-- REACT -->
     <script src="https://cdn.staticfile.org/react/16.4.0/umd/react.development.js"></script>
@@ -14,16 +13,15 @@
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 
     <!-- REACT -->
-    <script type="text/babel" src="./react/react_sd_mainpage.jsx"></script>
+    <script type="text/babel" src="./react/react_sd_table.jsx"></script>
 
     <!-- CSS -->
-    <!--<link rel="stylesheet" href="./css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="./css/sd_homepage.css">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/sd_info_table.css">
 
 </head>
 
 <body>
-<div id="mainpage"></div>
+<div id="sd_info_table"></div>
 </body>
-
 </html>
